<resources>
    <string name="app_name">FootballApp</string>
    <string name="date_dummy">Sat, 23 Aug 2018</string>
    <string name="club_dummy">Barcelona</string>
    <string name="vs_label">VS</string>
    <string name="score_dummy">1</string>
    <string name="goals_label">Goals</string>
    <string name="shots_label">Shots</string>
    <string name="keeper_label">Goal Keeper</string>
    <string name="lineups_label">Lineups</string>
    <string name="midfield_label">Midfield</string>
    <string name="defense_label">Defense</string>
    <string name="forward_label">Forward</string>
    <string name="substitutes_label">Substitutes</string>
    <string name="next_label">Next Match</string>
    <string name="last_label">Last Match</string>
    <string name="teams_label">Teams</string>
    <string name="favorite_label">Favorite</string>
    <string name="past_label">Past</string>
    <string name="empty_label">Oops...</string>
    <string name="empty_message">Data is empty...</string>
</resources>
