<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/pasts"
          android:enabled="true"
          android:title="@string/past_label"
          android:icon="@drawable/ic_event_available_black_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/nexts"
          android:enabled="true"
          android:title="@string/next_label"
          android:icon="@drawable/ic_event_black_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/teams"
          android:enabled="true"
          android:title="@string/teams_label"
          android:icon="@drawable/ic_team"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/favorites"
          android:enabled="true"
          android:title="@string/favorite_label"
          android:icon="@drawable/ic_stars_black_24dp"
          app:showAsAction="ifRoom"/>
</menu>