<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_20"
        android:background="@color/white"
        android:layout_marginTop="@dimen/space_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_schedule"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/date_dummy"/>

    <LinearLayout
            android:layout_marginTop="@dimen/space_5"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="@dimen/space_0"
                android:layout_weight="1"
                android:id="@+id/tv_home"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/text_20"
                android:textColor="@color/black"
                android:text="@string/club_dummy"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="@dimen/space_0"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_score_home"
                    android:layout_width="@dimen/space_0"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20"
                    android:text="@string/score_dummy"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="@dimen/space_0"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_20"
                    android:text="@string/vs_label"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_score_away"
                    android:layout_width="@dimen/space_0"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_20"
                    android:text="@string/score_dummy"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:layout_width="@dimen/space_0"
                android:layout_weight="1"
                android:id="@+id/tv_away"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/club_dummy"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_marginTop="@dimen/space_10"
          android:layout_height="@dimen/line"
          android:background="@color/black"/>
</LinearLayout>