<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.detail.DetailMatchActivity">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/progress"
                     android:layout_centerInParent="true"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_margin="@dimen/space_10"
                      android:layout_height="match_parent">

            <TextView android:id="@+id/tv_schedule"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:layout_gravity="center"/>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                <ImageView android:id="@+id/iv_home"
                           android:layout_width="@dimen/space_100"
                           android:layout_height="@dimen/space_100"
                           android:layout_alignParentLeft="true"
                           android:layout_centerVertical="true"/>

                <TextView android:id="@+id/tv_home"
                          android:layout_width="wrap_content"
                          android:textSize="@dimen/text_20"
                          android:textColor="@color/colorPrimary"
                          android:layout_below="@+id/iv_home"
                          android:layout_marginTop="@dimen/space_25"
                          android:layout_height="wrap_content"/>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_centerInParent="true"
                              android:orientation="horizontal"
                              android:gravity="center"
                              android:layout_centerVertical="true"
                              android:layout_height="wrap_content">

                    <TextView android:id="@+id/tv_score_home"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:padding="@dimen/space_5"
                              android:textSize="@dimen/text_30"/>

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:padding="@dimen/space_5"
                              android:textSize="@dimen/text_30"
                              android:text="@string/vs_label"/>

                    <TextView android:id="@+id/tv_score_away"
                              android:layout_width="wrap_content"
                              android:padding="@dimen/space_5"
                              android:layout_height="wrap_content"
                              android:textSize="@dimen/text_30"/>
                </LinearLayout>

                <ImageView android:id="@+id/iv_away"
                           android:layout_width="@dimen/space_100"
                           android:layout_height="@dimen/space_100"
                           android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"/>

                <TextView android:id="@+id/tv_away"
                          android:layout_width="wrap_content"
                          android:textSize="@dimen/text_20"
                          android:layout_alignParentRight="true"
                          android:textColor="@color/colorPrimary"
                          android:layout_below="@+id/iv_away"
                          android:layout_marginTop="@dimen/space_25"
                          android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/goals_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_goal_home"
                          android:layout_width="@dimen/space_0"
                          android:textColor="@color/black"
                          android:gravity="left"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_goal_away"
                          android:layout_width="@dimen/space_0"
                          android:layout_weight="1"
                          android:gravity="right"
                          android:textColor="@color/black"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/shots_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_shot_home"
                          android:layout_width="@dimen/space_0"
                          android:gravity="left"
                          android:layout_weight="1"
                          android:textColor="@color/black"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_shot_away"
                          android:textColor="@color/black"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_20"
                      android:textStyle="bold"
                      android:textColor="@color/black"
                      android:layout_marginBottom="@dimen/space_5"
                      android:text="@string/lineups_label"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/keeper_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_keeper_home"
                          android:layout_width="@dimen/space_0"
                          android:textColor="@color/black"
                          android:gravity="left"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_keeper_away"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:layout_weight="1"
                          android:textColor="@color/black"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/defense_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_defense_home"
                          android:layout_width="@dimen/space_0"
                          android:gravity="left"
                          android:textColor="@color/black"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_defense_away"
                          android:textColor="@color/black"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/midfield_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_midfield_home"
                          android:layout_width="@dimen/space_0"
                          android:gravity="left"
                          android:textColor="@color/black"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_midfield_away"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:textColor="@color/black"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/forward_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_forward_home"
                          android:layout_width="@dimen/space_0"
                          android:textColor="@color/black"
                          android:gravity="left"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_forward_away"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:textColor="@color/black"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>
            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="@dimen/line"
                  android:background="@color/black"
                  android:layout_marginTop="@dimen/space_5"
                  android:layout_marginBottom="@dimen/space_5"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:textSize="@dimen/text_18"
                      android:textColor="@color/colorPrimary"
                      android:text="@string/substitutes_label"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:weightSum="2"
                          android:orientation="horizontal">

                <TextView android:id="@+id/tv_substitutes_home"
                          android:textColor="@color/black"
                          android:layout_width="@dimen/space_0"
                          android:gravity="left"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>

                <TextView android:id="@+id/tv_substitutes_away"
                          android:layout_width="@dimen/space_0"
                          android:gravity="right"
                          android:textColor="@color/black"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>